<resources>
    <string name="app_name">ForBlitz Statistics</string>
    <string name="loading">Loading&#8230;</string>
    <string name="input_nickname">Enter your nickname here</string>

    <string name="random_battles">RANDOM BATTLES</string>
    <string name="rating_battles">RATING BATTLES</string>
    <string name="win_rate">VICTORIES, %</string>
    <string name="average_damage">AVERAGE DAMAGE</string>
    <string name="efficiency">EFFICIENCY</string>
    <string name="survived">SURVIVED, %</string>
    <string name="hits_from_shots">HITS, %</string>

    <string name="I">I level</string>
    <string name="II">II level</string>
    <string name="III">III level</string>
    <string name="IV">IV level</string>
    <string name="V">V level</string>
    <string name="VI">VI level</string>
    <string name="VII">VII level</string>
    <string name="VIII">VIII level</string>
    <string name="IX">IX level</string>
    <string name="X">X level</string>

    <string name="cn">China</string>
    <string name="eu">European Nation</string>
    <string name="fr">France</string>
    <string name="gb">U.K.</string>
    <string name="de">Germany</string>
    <string name="jp">Japan</string>
    <string name="other">Hybrid nation</string>
    <string name="us">U.S.A.</string>
    <string name="su">U.S.S.R.</string>

    <string name="clan_false">The player is not a member of a clan</string>

    <string name="creator_name">Creator:</string>
    <string name="created_at">Created at:</string>
    <string name="renamed_at">Renamed at:</string>
    <string name="old_name">Old name:</string>
    <string name="old_tag">Old tag:</string>

    <string name="recruiting_options_info">Autorecruitment parameters</string>
    <string name="recruiting_options_vehicles_level">Required tanks tiers:</string>
    <string name="recruiting_options_wins_ratio">Victories, %:</string>
    <string name="recruiting_options_average_battles_per_day">Battles per day:</string>
    <string name="recruiting_options_battles">Total battles:</string>
    <string name="recruiting_options_average_damage">Average damage:</string>

    <string name="recruiting_options_disabled">Automatic recruitment is not available for clan [%1$s] %2$s</string>

    <string name="enter_nickname">To view statistics, enter a nickname in the search field</string>
    <string name="enter_nickname_or_select">To view statistics, enter a nickname in the search field or select the one suggested below</string>

    <string name="empty">--</string>
    <string name="tier">Tier of vehicle</string>
    <string name="clear_tier">Clear the tier filter</string>
    <string name="classes">Types of vehicles</string>
    <string name="tank_sort">Type of sorting</string>

    <string name="battles_sort">Sorting by count of battles</string>
    <string name="damage_sort">Sorting by average damage</string>
    <string name="efficiency_sort">Sorting by efficiency</string>
    <string name="xp_sort">Sorting by average xp</string>
    <string name="win_rate_sort">Sorting by win rate</string>

    <string name="apply_filters">Apply filters</string>
    <string name="nothing_found">Could\'t find anything by the filters you selected</string>

    <string name="rating_false">The player did not participate in rating battles</string>
    <string name="random_false">The player did not participate in random battles</string>

    <string name="detailed_statistics">Detailed statistics</string>

    <string name="wins_small">Victories</string>
    <string name="losses_small">Defeats</string>
    <string name="win_and_survive_small">Win and survive</string>
    <string name="survive_small">Survive</string>
    <string name="damage_dealt_small">Damage caused</string>
    <string name="damage_received_small">Damage received</string>
    <string name="xp_small">Total xp</string>
    <string name="frags_small">Frags</string>
    <string name="shots_small">Shots</string>
    <string name="hits_small">Hits</string>
    <string name="spotted_small">Spotted</string>
    <string name="frags8p_small">Frags on VIII+</string>
    <string name="max_xp_small">Max xp</string>
    <string name="max_frags_small">Max frags</string>
    <string name="captured_points_small">Base capture points</string>
    <string name="dropped_small">Base defense points</string>
    <string name="select_session">Select a comparison date</string>
    <string name="to_session_stat">To statistics for the session</string>
    <string name="from_session_stat">To statistics for the all time</string>
    <string name="clan_members">Clan members</string>
    <string name="back">Back</string>

    <string name="clan_info">Clan information</string>

    <string name="delete">Delete</string>
    <string name="delete_alert">Are you sure you want to permanently delete this session?</string>
    <string name="delete_successfully">Session successfully deleted</string>
    <string name="delete_failed">An error occurred when deleting the session, please try again</string>
    <string name="delete_select">You cannot delete the selected session</string>

    <string name="clan_role_private">Private</string>
    <string name="clan_role_executive_officer">Executive officer</string>
    <string name="clan_role_commander">Commander</string>

    <string name="joined_at">joined at\u0020</string>
    
    <string name="network_error">Connection could not be established</string>
    <string name="network_error_desc">Check your Internet connection</string>
    <string name="network_error_try_again">Reconnect</string>

    <string name="network_region_error_desc">It seems we were unable to connect to ForBlitz. Perhaps the issue lies in the restriction of access to Russian websites. Please enable a VPN or proxy to bypass the block and try again.</string>

    <string name="last_search">You searched for this account\u0020</string>

    <string name="select_region">Cluster to search for</string>
    <string name="select_region_ru">RU-cluster</string>
    <string name="select_region_eu">EU-cluster</string>
    <string name="select_region_na">NA-cluster</string>
    <string name="select_region_asia">ASIA-cluster</string>
    <string name="select_region_lesta">Lesta Games</string>
    <string name="select_region_wargaming">Wargaming</string>

    <string name="update_available">New Update Available</string>
    <string name="update_available_desc">Please, update ForBlitz Statistics to latest version</string>
    <string name="update">Update</string>

    <string name="terms_of_service">Terms of service</string>
    <string name="terms_of_service_desc"><![CDATA[By using the app, you accept our privacy policy (<a href="https://forblitz.ru/forblitzstats-privacy/">https://forblitz.ru/forblitzstats-privacy/</a>]]>)</string>
    <string name="accept">Accept</string>
    <string name="exit">Exit</string>

    <string name="filters">Filters</string>

    <string name="error">Error</string>
    <string name="nickname_not_found">Couldn\'t find players with the nickname you entered. Are you sure that the account is located on the XXX cluster that you have chosen now?</string>

    <string name="lt">Light tank</string>
    <string name="mt">Medium tank</string>
    <string name="ht">Heavy tank</string>
    <string name="at">AT-SPG</string>

    <string name="random">Random battles</string>
    <string name="rating">Rating battles</string>
    <string name="achievements">Achievements</string>
    <string name="clan">Clan information</string>
    <string name="tanks">Tanks statistics</string>

    <string name="region_ru">RU</string>
    <string name="region_eu">EU</string>
    <string name="region_na">NA</string>
    <string name="region_asia">ASIA</string>

    <string name="region_select">Please select the region where the account is located</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <string name="locale">Language</string>
    <string name="locale_ru">Русский</string>
    <string name="locale_en">English</string>
    <string name="locale_uk">Українська</string>
    <string name="locale_ru_desc">ru-RU</string>
    <string name="locale_en_desc">en-US</string>
    <string name="locale_uk_desc">uk-UK</string>

    <string name="average_damage_rounding">Rounding the display of average damage to the hundredths</string>
    <string name="average_damage_rounding_description">Rounding the value of average damage not to whole numbers, but to hundredths. Allows for more detailed tracking of changes in statistics</string>
    <string name="log_display">Enable the display of logs on the loading screen</string>
    <string name="log_display_description">Allows you to track the status of queries in detail during the loading of search results</string>
    <string name="haptics">Disable haptics</string>
    <string name="haptics_description">Disable haptic feedback for button presses</string>

    <string name="advanced_settings">Advanced settings</string>

    <string name="log_request_sent">request sent</string>
    <string name="log_response_received">response received</string>

    <string name="regular_battles_short_name">regular</string>
    <string name="rating_battles_short_name">rating</string>
    <string name="tournament_battles_short_name">tournament</string>
    
    <string name="please_wait">Please wait for the search results to load</string>

    <string name="lesta_exception">An error occurred on the Lesta Studio API side</string>
    <string name="wargaming_exception">An error occurred on the Wargaming API side</string>

    <string name="error_message">Error %1$s: %2$s</string>

    <string name="sessions_io">Sessions</string>
    <string name="sessions_io_import">Import sessions</string>
    <string name="sessions_io_export">Export sessions</string>
    <string name="sessions_io_import_error">Import error (%1$s)</string>

    <string name="sessions_exported_to">Sessions have been exported to file %1$s</string>

    <string name="sessions_alert_title">No data to display</string>
    <string name="sessions_statistics_alert_text">Play at least one more match and update this account\'s statistics to create a new comparison point.</string>
    <string name="sessions_list_alert_text">At least two saved sessions are required for display. Play at least one more match and update this account\'s statistics to create a new comparison point.</string>

    <string name="refresh_statistics">Update statistics</string>

</resources>